[package]
name = "nebula"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1.1"
tendermint-p2p = "0.40.4"
ed25519-consensus = "2.1.0"
rand_core = { version = "0.6.4"}
toml = "0.8.22"
base64 = "0.22.1"
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.12"
hex = "0.4.3"
tokio = { version = "1.45.1", features = ["full"] }
rocksdb = "0.23.0"
openraft =  { version =  "0.9.18", features = ["serde", "storage-v2"] }
byteorder = "1.5.0"
tide = "0.16.0"
toy-rpc = { version = "0.10.0", features = [
  "ws_tokio",
  "server",
  "client",
  "tokio_runtime",
] }
serde_json = "1.0.57"
reqwest = { version = "0.12.5", features = ["json"] }



[build-dependencies]
prost-build = "0.13"
