[package]
name = "nebula"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1.1"
tendermint-p2p = "0.40.4"
ed25519-consensus = "2.1.0"
rand_core = { version = "0.6.4", features = ["std"]}
toml = "0.8.22"
base64 = "0.22.1"
log = "0.4.27"
env_logger = "0.11.8"
thiserror = "2.0.12"
hex = "0.4.3"
serde_json = "1.0.140"
reqwest = { version = "0.12.19", default-features = false, features = ["blocking", "json", "native-tls-vendored"] }
k256 = { version = "0.10", features = ["ecdsa"] }
blst = "0.3"
bls-signatures = "0.15.0"

[build-dependencies]
prost-build = "0.13"
